subs route, product and payment page, gift and buy backend

--- a/planty/public/css/style.css
+++ b/planty/public/css/style.css
@@ -214,7 +214,7 @@
     text-align: center;
     justify-content: center;
     margin-bottom: 2rem;
-    /* margin-top: 2rem; */
+    margin-top: 5rem;
 }
 
 .plan-information-title-2{
