--- a/planty/public/css/productDetail.css
+++ b/planty/public/css/productDetail.css
@@ -28,3 +28,7 @@
     box-shadow: 0px 8px 30px 0px rgba(0, 0, 0, 0.25);
     backdrop-filter: blur(6.099999904632568px);
 }
+
+.strikethrough-price.disabled {
+    display: none;
+}
