--- a/planty/public/css/disease_style.css
+++ b/planty/public/css/disease_style.css
@@ -5,8 +5,6 @@
 }
 
 .card-title{
-    /* max-width: 243px;
-    min-height: 334px; */
     width: 15.1875rem;
     height: 20.875rem;
     display: flex;
@@ -14,7 +12,9 @@
     justify-content: center;
     color: #122218;
 
-    padding: 2rem;
+    background-repeat: no-repeat;
+    text-decoration: none;
+    padding: 3rem;
 
     background: var(
         --tes1,
@@ -32,11 +32,28 @@
 }
 
 .card-title:hover {
+    opacity: 1;
     border-radius: 0.9375rem;
+
+    background: var(
+        --tes1,
+        linear-gradient(
+            108deg,
+            rgba(173, 188, 159, 0.3) 10.91%,
+            rgba(79, 86, 73, 0.3) 111.54%
+        )
+    );
+
     border: 3px solid var(--tes1, #ADBC9F);
-    background: url(../assets/desc-card.png) lightgray 50% / cover no-repeat;
     box-shadow: 0px 8px 20px 0px #FFF;
     backdrop-filter: blur(6.099999904632568px);
+}
+
+.hover-background {
+    background-size: cover !important;
+    background-position: center !important;
+    background-repeat: no-repeat !important;
+    object-fit: cover;
 }
 
 .card-title:hover p{
@@ -59,9 +76,28 @@
     position: absolute;
     z-index: 1;
     left: 0;
+    padding: 0;
+    margin: 0;
     border-radius: 0.9375rem;
-    border: 3px solid var(--tes1, #ADBC9F);
-    background: url(../assets/desc-card.png) lightgray 50% / cover no-repeat;
+    border: 1px solid var(--tes1, #ADBC9F);
+    background: lightgray 50% / cover no-repeat;
+
+    box-shadow: 0px 8px 30px 0px rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(6.099999904632568px);
+}
+
+.image {
+    width: 15.375rem;
+    height: 28.1875rem;
+    position: absolute;
+    z-index: 1;
+    left: 0;
+    padding: 0;
+    margin: 0;
+    border-radius: 0.9375rem;
+    border-radius: 0.9375rem;
+    border: 1px solid var(--tes1, #ADBC9F);
+    background: lightgray 50% / cover no-repeat;
 
     box-shadow: 0px 8px 30px 0px rgba(0, 0, 0, 0.25);
     backdrop-filter: blur(6.099999904632568px);
@@ -70,6 +106,7 @@
 .desc-disease{
     width: 34.0625rem;
     height: 24.5625rem;
+    padding: 2rem;
     position: relative;
     flex-direction: column;
     justify-content: center;
@@ -89,3 +126,89 @@
     backdrop-filter: blur(6.099999904632568px);
 }
 
+#disease-number {
+    font-family: Poppins, sans-serif;
+    font-weight: 900;
+    font-size: 64px;
+}
+
+@media (max-width: 1201.98px) {
+    .container {
+        width: 100%;
+        height: auto;
+    }
+
+    .background-container {
+        width: 100%;
+        height: auto;
+        background-repeat: no-repeat;
+    }
+
+    .disease {
+        width: 100%;
+        justify-content: center;
+        align-content: center;
+        padding: 0;
+        margin: 0;
+    }
+
+    .disease-list {
+        width: 80%;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        gap: 1rem;
+    }
+
+    .card-title {
+        width: 10rem;
+        height: 14rem;
+        padding: 15px !important;
+    }
+
+    .disease-card p {
+        font-size: var(--planty-heading-mobile-3-font-size);
+    }
+
+    #disease-number {
+        font-size: 32px;
+    }
+
+    .desc-disease {
+        width: 24rem;
+        height: 20rem;
+        flex-shrink: 0;
+        justify-content: center;
+        align-self: center;
+        gap: 0 !important;
+        padding: 0 !important;
+    }
+
+    .desc-disease p {
+        font-size: var(--planty-heading-mobile-paragraph-font-size);
+        padding-left: 13rem !important;
+    }
+
+    .desc-disease h1 {
+        font-size: var(--planty-heading-mobile-3-font-size);
+        padding-left: 13rem !important;
+    }
+
+    .desc-disease-card {
+        width: 100%;
+        height: auto;
+        flex-shrink: 0;
+        padding: 0 !important;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        gap: 0 !important;
+    }
+
+    .image-disease {
+        width: 12rem;
+        height: 24rem;
+        flex-shrink: 0;
+        left: 6rem;
+    }
+}
