--- a/planty/public/css/utils.css
+++ b/planty/public/css/utils.css
@@ -42,6 +42,10 @@ body {
     color: rgba(var(--font), 1);
 }
 
+#img-logo {
+    z-index: -100;
+}
+
 #img-logo img {
     object-fit: contain;
 }
@@ -270,6 +274,26 @@ body {
         height: 1.53125rem;
         padding: 0.30625rem 0.6125rem;
         border-radius: 0.30625rem;
+        font-size: var(--planty-heading-mobile-paragraph-font-size);
+    }
+
+    .planty-heading-1 {
+        font-size: var(--planty-heading-mobile-1-font-size);
+    }
+
+    .planty-heading-2 {
+        font-size: var(--planty-heading-mobile-2-font-size);
+    }
+
+    .planty-heading-3 {
+        font-size: var(--planty-heading-mobile-3-font-size);
+    }
+
+    .planty-heading-4 {
+        font-size: var(--planty-heading-mobile-4-font-size);
+    }
+
+    .planty-text-paragraph {
         font-size: var(--planty-heading-mobile-paragraph-font-size);
     }
 }
