--- a/planty/public/css/profile_style.css
+++ b/planty/public/css/profile_style.css
@@ -2,6 +2,8 @@
     padding-top: 10rem;
     padding-left: 7%;
     padding-right: 7%;
+    background-image: url('/assets/ProfileBackground.png');
+    background-size: cover;
 }
 
 .profile-container .profile-pic {
@@ -82,6 +84,10 @@
 
 }
 @media (max-width: 768px) {
+    .profile-container {
+        background-image: url('/assets/ProfileBackgroundMobile.png');
+    }
+
     .profile-container .profile-pic {
         width: 15%;
     }
