--- a/planty/public/css/tutorial_style.css
+++ b/planty/public/css/tutorial_style.css
@@ -13,7 +13,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 7rem;
+    /* padding-top: 2rem; */
 }
 
 .tutorial-container.container-fluid {
@@ -24,6 +24,19 @@
     margin: 0;
     /* padding-top: 7rem; */
 }
+
+.jumbo-back{
+    display: flex;
+    justify-content: flex-start;
+    width: 100%;
+    padding-left: 7%;
+}
+
+.back-btn{
+    width: 1.3125rem;
+    height: 2rem;
+}
+
 
 .jumbo-text {
     justify-content: center;
@@ -103,9 +116,24 @@
     transition: all 0.2s !important;
 }
 
-.tutor-card:hover {
-    /* background: var(--tes1, linear-gradient(108deg, rgba(173, 188, 159, 0.50) 10.91%, rgba(79, 86, 73, 0.70) 111.54%)); */
+/* .tutor-card:hover {
     background-color: #adbc9f;
+} */
+
+#card1:hover{
+    background-color: #ADBC9F;
+}
+
+#card2:hover{
+    background-color: #618264;
+}
+
+#card3:hover{
+    background-color: #3EA047;
+}
+
+#card4:hover{
+    background-color: #2D563D;
 }
 
 .tutor-card-top {
@@ -152,7 +180,7 @@
 }
 
 .tutor-card-title img {
-    width: 1.8125rem;
+    width: 2.3rem;
     height: 3.5625rem;
 }
 
@@ -535,4 +563,7 @@
         padding-right: 5%;
     }
 
+    .jumbo-text{
+        gap: 3rem;
+    }
 }
