--- a/planty/public/css/contact_us_style.css
+++ b/planty/public/css/contact_us_style.css
@@ -5,8 +5,7 @@
 
 .contact-img-container {
     flex: 1;
-    padding: 0;
-    margin: 0;
+    min-height: 300px;
     position: relative;
     overflow: hidden;
 }
@@ -14,7 +13,9 @@
 .contact-img-container img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit:cover;
+    top: 0;
+    left: 0;
 }
 
 .form-group {
@@ -91,7 +92,7 @@ h1 {
     font-weight: bold;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 991.8px) {
     .contact-container {
         flex-direction: column;
     }
@@ -104,6 +105,8 @@ h1 {
         padding: 2rem;
     }
 }
+
+
 
 /* modal  */
 .modal-content {
