--- a/planty/public/css/tutorial_style.css
+++ b/planty/public/css/tutorial_style.css
@@ -96,6 +96,7 @@
     align-items: center;
     gap: 3rem;
     padding-left: 15%;
+    padding-right: 10%;
 }
 
 .tutor-card {
@@ -152,6 +153,8 @@
     /* background-color: #ADBC9F; */
 }
 
+
+
 .tutor-card-top p {
     color: #122218;
     font-family: "DM Sans";
@@ -182,6 +185,14 @@
 .tutor-card-title img {
     width: 2.3rem;
     height: 3.5625rem;
+}
+
+#card2 .tutor-card-title img{
+    width: 3rem;
+}
+
+#card4 .tutor-card-title img{
+    width: 3rem;
 }
 
 .tutor-card-title p {
@@ -368,6 +379,21 @@
 .popup-title img {
     width: 1.29031rem;
     height: 2.52531rem;
+}
+
+#popup-img2{
+    width: 2rem;
+    height: 2.25rem;
+}
+
+#popup-img3{
+    width: 2rem;
+    height: 3.4rem;
+}
+
+#popup-img4{
+    width: 2rem;
+    height: 3.25rem;
 }
 
 .popup-head p {
