--- a/planty/public/css/donts.css
+++ b/planty/public/css/donts.css
@@ -10,19 +10,24 @@
     background-size: cover;
     margin: 0;
     overflow-x: hidden;
+    width: 100vw;
 }
 
 .jumbotron {
-    height: 45.0625rem;
+    height: 35.0625rem;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
+.back {
+    padding-left: 5% !important;
+    padding-top: 7rem;
+}
+
 .mistake-card {
     width: 21.5625rem;
     height: 7.5625rem;
-    border-radius: 0.9375rem;
     background: var(
         --tes1,
         linear-gradient(
@@ -32,6 +37,7 @@
         )
     );
     border: 1px solid var(--tes1, #adbc9f);
+    border-radius: 0.9375rem;
     box-shadow: 0px 8px 30px 0px rgba(0, 0, 0, 0.25);
     backdrop-filter: blur(6.099999904632568px);
     transition: all 0.2s ease-out time;
