--- a/planty/public/css/about_us_style.css
+++ b/planty/public/css/about_us_style.css
@@ -66,6 +66,8 @@ body {
     backdrop-filter: blur(6.099999904632568px);
     padding: 1.5rem;
     transition: 0.5s;
+    width: 17.8125rem;
+    height: 15.625rem;
 }
 
 .our-values-item-container:hover {
@@ -80,9 +82,13 @@ body {
     color: rgba(var(--white-background), 1);
 }
 
+.our-values-item-container:hover h4{
+    color: white;
+}
 .our-values-item-container img {
     width: 15%;
 }
+
 
 .history-container {
     margin-top: 15rem;
@@ -129,11 +135,25 @@ body {
     );
     box-shadow: 0px 8px 30px 0px rgba(var(--white-background), 0.7);
     backdrop-filter: blur(6.099999904632568px);
+
+
 }
+
+.our-team-item-container:hover {
+   color: white;
+
+}
+
+.our-team-item-container:hover {
+   color: white !important;
+
+}
+
 
 .our-team-item-container h4 {
     margin: 0;
     margin-top: 1rem;
+
 }
 
 .our-team-item-container img {
