--- a/planty/public/css/funfact.css
+++ b/planty/public/css/funfact.css
@@ -19,6 +19,12 @@
     z-index: -1000;
 }
 
+.back{
+    padding-left: 5%;
+    padding-top: 7rem;
+    z-index: 100000;
+}
+
 
 
 .back-icon{
@@ -41,14 +47,14 @@
     border-radius: 15px;
     right: 0rem;
     padding: 2.4rem 2.8rem 4.2rem 2.8rem;
-    border-style: inset;
+    /* border-style: inset; */
     border-width: 1.5px;
     background-image: linear-gradient(to bottom right, rgba(255, 255, 255, 0.3), rgba(97, 130, 100, 0.3));
     border-image: linear-gradient(to bottom left, rgba(173, 188, 159, 0.5), rgba(255, 255, 255, 0.5));
     box-shadow: 0px 8px 30px 0 rgba(0, 0, 0, 0.25);
     backdrop-filter: blur(12.2px);
     margin-top: 10% !important;
-    margin-right: -10%;
+    margin-right: -5%;
     width: 27.625rem;
     height: 22.75rem;
     overflow: hidden;
@@ -83,20 +89,43 @@
 .benefit-item-container {
     /* margin-top: 0; */
     /* border-style: inset; */
-    border-width: 1.5px;
+    /* border-width: 1.5px; */
     border-radius: 0.9375rem;
     /* border: 1px solid var(--tes1, #ADBC9F); */
+    border: 1px solid var(--tes1, #ADBC9F);
     background: linear-gradient(108deg, rgba(255, 255, 255, 0.30)10.91%, rgba(79, 86, 73, 0.30)111.54%);
     box-shadow: 0px 8px 30px 0 rgba(0, 0, 0, 0.25);
     backdrop-filter: blur(6.099999904632568px);
     padding: 1.5rem;
-    border-radius: 15px;
     margin: 1rem;
+    transition: all 0.3s ease-in;
     /* margin-right: 5%; */
+}
+
+.benefit-item-container:hover{
+    border-radius: 0.95388rem;
+border: 1.017px solid var(--tes1, #ADBC9F);
+
+background: var(--lin3, linear-gradient(180deg, #122218 0%, #618264 100%));
+box-shadow: 0px 8px 30px 0px #122218;
+backdrop-filter: blur(6.099999904632568px);
+}
+
+.benefit-item-container:hover h4{
+    color: white;
+}
+
+.benefit-item-container:hover p{
+    color: white;
 }
 
 .benefit-2{
     display: none !important;
+}
+
+.why-image {
+    max-width: 23.3125rem;
+    max-height: 17.875rem;
 }
 
 @media (max-width: 576px) {
@@ -154,26 +183,55 @@
             width: 100%;
             border-radius: 10px;
          }
-    .benefit-item {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: nowrap;
-        overflow-x: auto;
+   .benefit-item {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    overflow-x: scroll;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    scroll-behavior: smooth;
+    -webkit-overflow-scrolling: touch;
+    justify-content: first baseline;
+    padding: 0;
+
+}
+    .benefit-wrapper{
+        padding: 0;
+    }
+    .benefit-2{
+        padding: 0;
+    }
+
+    .benefit-item:first-child{
+
+        margin-left: 1rem !important;
+
+    }
+
+
+
+    .benefit-item::-webkit-scrollbar {
+        display: none;  /* for Chrome, Safari, and Opera */
     }
 
 
     .benefit-item-container {
-        flex: 0 0 auto;
         max-width: 10.9375rem;
         max-height: 12.5rem;
         flex-shrink: 0;
 
     }
-    .why-content-wrapper{
-        flex-direction: column !important;
-        justify-content: center;
+   .why-content-wrapper {
+        display: flex;
+        flex-direction: column;
         align-items: center;
-        text-align: center;
+    }
+
+     .why-image {
+        max-width: 17.4375rem;
+        max-height: 12.125rem;
+
     }
 
     .benefit-1{
@@ -182,7 +240,14 @@
     .benefit-2{
         display: block !important;
     }
+    .container{
 
+        --bs-gutter-x: 0 !important;
+    }
+    .why-content-text{
+        text-align: center ;
+        justify-content: center;
+    }
 
 }
 
