--- a/planty/public/css/register_style.css
+++ b/planty/public/css/register_style.css
@@ -23,7 +23,7 @@
 }
 
 .form-container {
-    padding: 6% 8% 2rem 8%;
+    padding: 5% 8% 2rem 8%;
     color: rgb(var(--font));
     display: flex;
     flex-direction: column;
@@ -36,7 +36,7 @@
 
 .form-textfield {
     display: flex;
-    row-gap: 2rem;
+    row-gap: 1.3rem;
     flex-direction: column;
 }
 
@@ -61,28 +61,35 @@
 
 .register-agreement-container input {
     width: 1.5rem;
-    height: 1.5rem
+    height: 1.5rem;
 }
 
 input {
     border-radius: 10px;
     border: 1px solid #618264;
-    background: #F1F3F2;
+    background: #f1f3f2;
     height: 50px;
     padding-left: 10px;
     padding-right: 10px;
 }
 
-.register-btn {
-    border-radius: 10px;
-    background: rgb(var(--hijau-gelap));
-    height: 50px;
-    color: rgb(var(--white-background));
-    border: none;
-}
-
 .navbar {
     display: none;
+}
+
+.position-relative {
+    position: relative;
+}
+
+.position-absolute {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+}
+
+.form-control {
+    padding-right: 2.5rem; /* Adjust this as needed */
 }
 
 @media (max-width: 992px) {
@@ -95,12 +102,12 @@ input {
     }
 
     .form-container {
-        padding: 12% 12% 1rem 12%;
+        padding: 15% 12% 1rem 12%;
         width: 100%;
     }
 
     .form-container.login {
-        padding: 20% 10% 1.5rem 10%;
+        padding: 25% 10% 1.5rem 10%;
     }
 
     .form-container h1 {
@@ -114,6 +121,6 @@ input {
 
 @media (max-width: 576px) {
     .form-container {
-        padding: 20% 12% 1rem 12%;
+        padding: 30% 12% 1rem 12%;
     }
 }
