--- a/planty/public/css/utils.css
+++ b/planty/public/css/utils.css
@@ -30,6 +30,13 @@ body {
     backdrop-filter: blur(6.099999904632568px);
 }
 
+.nav-title {
+    font-family: "DM Sans", sans-serif;
+    font-size: 20px;
+    font-weight: 600;
+    color: white;
+}
+
 .nav-link {
     font-family: "DM Sans", sans-serif;
     font-size: 18px;
@@ -37,8 +44,13 @@ body {
     color: white;
 }
 
+.nav-link.active {
+    text-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25) !important;
+    color: rgba(var(--font), 1) !important;
+}
+
 .nav-link:hover {
-    text-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    text-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
     color: rgba(var(--font), 1);
 }
 
@@ -290,33 +302,33 @@ body {
         height: 1.53125rem;
         padding: 0.30625rem 0.6125rem;
         border-radius: 0.30625rem;
-        font-size: var(--planty-heading-mobile-paragraph-font-size);
+        font-size: var(--planty-heading-mobile-paragraph-font-size) !important;
     }
 
     .secondaryBtn{
         height: 1.53125rem;
         padding: 0.30625rem 0.6125rem;
         border-radius: 0.30625rem;
-        font-size: var(--planty-heading-mobile-paragraph-font-size);
+        font-size: var(--planty-heading-mobile-paragraph-font-size) !important;
     }
 
     .planty-heading-1 {
-        font-size: var(--planty-heading-mobile-1-font-size);
+        font-size: var(--planty-heading-mobile-1-font-size) !important;
     }
 
     .planty-heading-2 {
-        font-size: var(--planty-heading-mobile-2-font-size);
+        font-size: var(--planty-heading-mobile-2-font-size) !important;
     }
 
     .planty-heading-3 {
-        font-size: var(--planty-heading-mobile-3-font-size);
+        font-size: var(--planty-heading-mobile-3-font-size) !important;
     }
 
     .planty-heading-4 {
-        font-size: var(--planty-heading-mobile-4-font-size);
+        font-size: var(--planty-heading-mobile-4-font-size) !important;
     }
 
     .planty-text-paragraph {
-        font-size: var(--planty-heading-mobile-paragraph-font-size);
+        font-size: var(--planty-heading-mobile-paragraph-font-size) !important;
     }
 }
