--- a/planty/public/css/gallery_style.css
+++ b/planty/public/css/gallery_style.css
@@ -61,6 +61,11 @@ body {
     width: 100%;
 }
 
+.no-data-container {
+    height: 100vh;
+    padding: 0rem 1.5rem;
+}
+
 @media (max-width: 992px) {
     .gallery-item-container h1 {
         font-size: 36px;
