--- a/planty/public/css/utils.css
+++ b/planty/public/css/utils.css
@@ -44,13 +44,14 @@ body {
     color: white;
 }
 
-/* .nav-link.active {
+.nav-link.active {
     text-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25) !important;
     color: rgba(var(--font), 1) !important;
-} */
+}
 
 .nav-link:hover {
-    color: rgba(var(--white-background), 1);
+    text-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25) !important;
+    color: rgba(var(--font), 1) !important;
 }
 
 #img-logo {
