--- a/planty/public/css/register_style.css
+++ b/planty/public/css/register_style.css
@@ -8,18 +8,18 @@
     height: 100vh;
 }
 
-.register-img-container img {
-    width: 15%;
-    top: 5%;
-    left: 7%;
-    position: absolute;
-}
-
 .register-img-container video {
     width: 100%;
     height: 100%;
     object-fit: cover;
     display: block;
+}
+
+.logo-img-container {
+    top: 20px;
+    left: 20px;
+    width: 100px;
+    height: 50px;
 }
 
 .form-container {
@@ -85,7 +85,8 @@ input {
 }
 
 .form-control {
-    padding-right: 2.5rem; /* Adjust this as needed */
+    padding-right: 2.5rem;
+    /* Adjust this as needed */
 }
 
 @media (max-width: 992px) {
