--- a/planty/public/css/funfact.css
+++ b/planty/public/css/funfact.css
@@ -4,8 +4,14 @@
     overflow: hidden;
 }
 
-.body{
-     background-image: url("/assets/funfact/background-top.png");
+.body {
+    background-image: url("/assets/funfact/background-top.png");
+}
+
+.funfact-content {
+    background-image: url('/assets/funfact/background-top.png');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .background-top-fun {
@@ -19,7 +25,7 @@
     z-index: -1000;
 }
 
-.back{
+.back {
     padding-left: 5%;
     padding-top: 7rem;
     z-index: 100000;
@@ -27,12 +33,12 @@
 
 
 
-.back-icon{
+.back-icon {
     margin-left: 5%;
     margin-top: 5%;
 }
 
- .content-wrapper {
+.content-wrapper {
     display: flex;
     flex-wrap: nowrap;
     justify-content: center;
@@ -55,8 +61,8 @@
     backdrop-filter: blur(12.2px);
     margin-top: 10% !important;
     margin-right: -5%;
-    width: 27.625rem;
-    height: 22.75rem;
+    width: 25rem;
+    height: 24rem;
     overflow: hidden;
     max-height: 100%;
     display: flex;
@@ -64,23 +70,23 @@
     z-index: 10;
 }
 
-.content-image{
-    max-width: 42.0625rem;
-    max-height: 27.3125rem;
+.content-image {
+    width: 35%;
+    /* max-height: 27.3125rem; */
     border: 0;
     flex-shrink: 0;
     /* margin-top: -30rem; */
-    z-index: -10;
+    z-index: 0;
 
 }
 
-.benefit-title{
+.benefit-title {
     display: flex;
     flex-direction: column;
     left: 0;
 }
 
-.benefit-item{
+.benefit-item {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -102,52 +108,81 @@
     /* margin-right: 5%; */
 }
 
-.benefit-item-container:hover{
+.benefit-item-container:hover {
     border-radius: 0.95388rem;
-border: 1.017px solid var(--tes1, #ADBC9F);
+    border: 1.017px solid var(--tes1, #ADBC9F);
 
-background: var(--lin3, linear-gradient(180deg, #122218 0%, #618264 100%));
-box-shadow: 0px 8px 30px 0px #122218;
-backdrop-filter: blur(6.099999904632568px);
+    background: var(--lin3, linear-gradient(180deg, #122218 0%, #618264 100%));
+    box-shadow: 0px 8px 30px 0px #122218;
+    backdrop-filter: blur(6.099999904632568px);
 }
 
-.benefit-item-container:hover h4{
+.benefit-item-container:hover h4 {
     color: white;
 }
 
-.benefit-item-container:hover p{
+.benefit-item-container:hover p {
     color: white;
 }
 
-.benefit-2{
+.benefit-2 {
     display: none !important;
 }
 
-.why-image {
-    max-width: 23.3125rem;
-    max-height: 17.875rem;
+.why-image.container {
+    width: 40%;
+}
+
+.why-image img {
+    box-shadow: 0px 8px 30px 0px rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(6.099999904632568px);
+    border-radius: 15px;
+}
+
+.why-content {
+    margin-top: 10rem;
+    margin-bottom: 15rem;
+}
+
+@media (max-width: 992px) {
+    .benefit-1 .planty-text-paragraph {
+        text-align: center;
+    }
+
+    .benefit-1 .planty-heading-2 {
+        text-align: center;
+    }
+
+    .content-text {
+        width: 50%;
+    }
+
+    .content-image {
+        width: 50%;
+    }
 }
 
 @media (max-width: 576px) {
-
-    .planty-heading-1 {
-        font-size: var(--planty-heading-mobile-1-font-size) !important;
+    .funfact-content {
+        background-image: url('/assets/funfact/background-top-mobile.png');
+        background-position: top;
     }
 
-    .planty-heading-2 {
-        font-size: var(--planty-heading-mobile-2-font-size) !important;
+    .content-wrapper {
+        height: 80vh;
     }
 
-    .planty-heading-3 {
-        font-size: var(--planty-heading-mobile-3-font-size) !important;
+    .benefit-wrapper {
+        height: 53vh;
     }
 
-    .planty-heading-4 {
-        font-size: var(--planty-heading-mobile-4-font-size) !important;
+    .why-image {
+        width: 100%;
     }
 
-    .planty-heading-5 {
-        font-size: var(--planty-heading-mobile-5-font-size) !important;
+    .benefit-title {
+        padding-left: 2rem !important;
+        padding-right: 2rem !important;
     }
 
     .planty-text-sentence,
@@ -155,64 +190,67 @@ backdrop-filter: blur(6.099999904632568px);
         font-size: var(--planty-heading-mobile-paragraph-font-size) !important;
     }
 
-    .back-icon{
+    .back-icon {
         margin-top: 17%;
     }
 
-        .content-wrapper {
-                flex-direction: column;
-            }
-
-        .content-text {
-            background: rgba(255, 255, 255, 0.7);
-            padding: 20px;
-            border-radius: 10px;
-            margin: 10px;
-            max-width: 16.9375rem;
-            max-height: 13.375rem;
-            flex-shrink: 0
-        }
-        .content-image {
-            margin: 10px;
-            max-width: 17.5rem;
-            max-height: 11.3125rem;
-            flex-shrink: 0;
-
-        }
-        .content-image img {
-            width: 100%;
-            border-radius: 10px;
-         }
-   .benefit-item {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    overflow-x: scroll;
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-    scroll-behavior: smooth;
-    -webkit-overflow-scrolling: touch;
-    justify-content: first baseline;
-    padding: 0;
-
-}
-    .benefit-wrapper{
-        padding: 0;
-    }
-    .benefit-2{
-        padding: 0;
+    .content-wrapper {
+        flex-direction: column;
     }
 
-    .benefit-item:first-child{
+    .content-text {
+        background: rgba(255, 255, 255, 0.7);
+        padding: 20px;
+        border-radius: 10px;
+        margin: 10px;
+        width: 80%;
+        height: auto;
+        flex-shrink: 0
+    }
+
+    .content-image {
+        margin: 10px;
+        width: 80%;
+        flex-shrink: 0;
+
+    }
+
+    .content-image img {
+        width: 100%;
+        border-radius: 10px;
+    }
+
+    .benefit-item {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        overflow-x: scroll;
+        -ms-overflow-style: none;
+        scrollbar-width: none;
+        scroll-behavior: smooth;
+        -webkit-overflow-scrolling: touch;
+        justify-content: first baseline;
+        padding: 0;
+
+    }
+
+    .benefit-wrapper {
+        padding: 0;
+    }
+
+    .benefit-2 {
+        padding: 0;
+    }
+
+    .benefit-item:first-child {
 
         margin-left: 1rem !important;
 
     }
 
-
-
     .benefit-item::-webkit-scrollbar {
-        display: none;  /* for Chrome, Safari, and Opera */
+        display: none;
+        /* for Chrome, Safari, and Opera */
     }
 
 
@@ -222,34 +260,29 @@ backdrop-filter: blur(6.099999904632568px);
         flex-shrink: 0;
 
     }
-   .why-content-wrapper {
+
+    .why-content-wrapper {
         display: flex;
         flex-direction: column;
         align-items: center;
     }
 
-     .why-image {
-        max-width: 17.4375rem;
-        max-height: 12.125rem;
-
-    }
-
-    .benefit-1{
+    .benefit-1 {
         display: none !important;
     }
-    .benefit-2{
+
+    .benefit-2 {
         display: block !important;
     }
-    .container{
+
+    .container {
 
         --bs-gutter-x: 0 !important;
     }
-    .why-content-text{
-        text-align: center ;
+
+    .why-content-text {
+        text-align: center;
         justify-content: center;
     }
 
 }
-
-
-
