--- a/planty/public/css/utils.css
+++ b/planty/public/css/utils.css
@@ -19,13 +19,41 @@ body {
     font-family: "Poppins", sans-serif;
 }
 
+/* Full-screen overlay */
+.loading-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    /* Dark background with transparency */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 9999;
+    /* Make sure it's on top of everything */
+    visibility: hidden;
+    /* Initially hidden */
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
+/* Show the loading screen */
+.loading-overlay.show {
+    visibility: visible;
+    opacity: 1;
+}
+
+.loading-overlay .spinner-grow {
+    color: rgba(var(--hijau-terang), 1.0)
+}
+
 .navbar {
     padding: 0.5rem 0;
-    background-image: linear-gradient(
-        108deg,
-        rgba(173, 188, 159, 0.3) 10.91%,
-        rgba(79, 86, 73, 0.3) 111.54%
-    );
+    background-image: linear-gradient(108deg,
+            rgba(173, 188, 159, 0.3) 10.91%,
+            rgba(79, 86, 73, 0.3) 111.54%);
     box-shadow: 0px 8px 30px 0px rgba(0, 0, 0, 0.25);
     backdrop-filter: blur(6.099999904632568px);
 }
@@ -42,20 +70,21 @@ body {
     font-size: 18px;
     font-weight: 600;
     color: white;
+    display: inline-block;
 }
 
 .nav-link.active {
     text-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25) !important;
-    color: rgba(var(--font), 1) !important;
+    color: rgba(var(--white-background), 1) !important;
 }
 
 .nav-link:hover {
     text-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25) !important;
-    color: rgba(var(--font), 1) !important;
+    color: rgba(var(--white-background), 1) !important;
 }
 
 #img-logo {
-    z-index: -100;
+    transform: translate(-50%, 0%);
 }
 
 #img-logo img {
@@ -70,6 +99,8 @@ body {
     border: none;
     width: 8vw;
     font-size: 14px;
+    font-weight: 700;
+    color: rgba(var(--white-background), 1.0);
 }
 
 .nav-item.profile {
@@ -159,7 +190,7 @@ body {
 
 .primaryBtn {
     display: inline-flex;
-    border: 2px solid rgba(0,0,0,0) ;
+    border: 2px solid rgba(0, 0, 0, 0);
     height: 3.125rem;
     padding: 0.625rem 1.25rem;
     justify-content: center;
@@ -184,7 +215,7 @@ body {
 
 .secondaryBtn {
     display: inline-flex;
-    border: 2px solid rgba(0,0,0,0) ;
+    border: 2px solid rgba(0, 0, 0, 0);
     height: 3.125rem;
     padding: 0.625rem 1.25rem;
     padding: 0.30625rem 0.6125rem;
@@ -209,27 +240,27 @@ body {
 }
 
 
-.modalgen .modal-content{
+.modalgen .modal-content {
     padding: 2rem;
     display: flex;
     flex-direction: column;
     gap: 1rem;
 }
 
-.code-dialog{
+.code-dialog {
     justify-content: center;
     align-items: center;
 }
 
-.code-dialog .modal-header{
+.code-dialog .modal-header {
     text-align: center;
 }
 
-.code-dialog .modal-body{
+.code-dialog .modal-body {
     text-align: center;
 }
 
-.code-dialog .modal-footer{
+.code-dialog .modal-footer {
     text-align: center;
 }
 
@@ -299,18 +330,18 @@ body {
 }
 
 @media (max-width: 576px) {
-    .primaryBtn{
+    .primaryBtn {
         height: 1.53125rem;
         padding: 0.30625rem 0.6125rem;
         border-radius: 0.30625rem;
         font-size: var(--planty-heading-mobile-paragraph-font-size) !important;
     }
 
-    #aboutusBtn{
+    #aboutusBtn {
         width: 4.5rem;
     }
 
-    .secondaryBtn{
+    .secondaryBtn {
         height: 1.53125rem;
         padding: 0.30625rem 0.6125rem;
         border-radius: 0.30625rem;
